root var table done

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson-6</title>
+    <title>Lesson-8</title>
     <link rel="stylesheet" href="assets/css/reset.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -38,6 +38,9 @@
                 </li>
                 <li class="header-nav__item">
                     <a href="catalog.html" class="header-nav__item-link">Catalog</a>
+                </li>
+                <li class="header-nav__item">
+                    <a href="table-tag.html" class="header-nav__item-link">table-tag</a>
                 </li>
             </ul>
         </nav>
