--- a/catalog.html
+++ b/catalog.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson-6</title>
+    <title><Lesson-8></title>
     <link rel="stylesheet" href="assets/css/reset.css">
 
     <link rel="stylesheet" href="assets/css/style.css"> 
     <link rel="stylesheet" href="assets/css/catalog.css">
 
 </head>
-<body class="position-page">
+<body class="catalog-page">
     <header>
         <nav>
             <a href="index.html"class="logo">
@@ -35,6 +35,9 @@
                 </li>
                 <li class="header-nav__item">
                     <a href="catalog.html" class="header-nav__item-link">Catalog</a>
+                </li>
+                <li class="header-nav__item">
+                    <a href="table-tag.html" class="header-nav__item-link">table-tag</a>
                 </li>
             </ul>
         </nav>
