@media Lesson end

--- a/table-tag.html
+++ b/table-tag.html
@@ -13,11 +13,17 @@
     :root{
         --background: #ffffff;
         --table-primary-color:rgb(46, 50, 54); ;
-        --table-secondary-color: rgb(125, 189, 219);;
-       --table-cell-width: 450px;
-       --table-font-color: white;
+        --table-secondary-color: rgb(170, 170, 170);
+        --table-cell-width: 450px;
+        --table-cell-width-tablet: 250px;
+        --table-font-color: white;
+        --table-cell-netbook: 34px;
+        --table-cell-phone:12px;
+        --table-cell-tablet:24px;
+        --table-cell-padding: 38px;
     }
 </style>
+
 <body class="table-tag-page"> 
     <header>
         <nav>
